<resources>
    <string name="app_name">Soundboard2</string>
    <string name="button_A">A</string>
    <string name="button_B">B</string>
    <string name="button_C">C</string>
    <string name="button_D">D</string>
    <string name="button_E">E</string>
    <string name="button_F">F</string>
    <string name="button_G">G</string>
    <string name="button_A_Sharp">A#</string>
    <string name="button_C_Sharp">C#</string>
    <string name="button_D_Sharp">D#</string>
    <string name="button_F_Sharp">F#</string>
    <string name="button_G_Sharp">G#</string>
    <string name="button_Next">Increase</string>
    <string name="button_Back">Decrease</string>
    <string name="scale">Scale</string>
    <string name="fur_Elise">Fur Elise</string>
    <string name="megalovania">Megalovania</string>
    <string name="record">Record</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop">Stop</string>
</resources>
